# Specsheet_Automation_Backend

./: .gitignore  setup.cfg
api_server/: app.py  test.py
classes/: DUT_Spec_UECI_Info_Extraction.py  DUT_spec_attach_request_info_extraction.py  LTE_UECI_dut_info_extraction.py  LTE_UECI_spec_info_extraction.py  LTE_data_analysis.py  NR_Spec_UECI_NR_Info_Extraction.py  NR_UECI_dut_info_extraction.py  NR_UECI_spec_info_extraction.py  NR_data_analysis.py  Spec_Info_Extraction.py  Spec_UECI_Info_Extraction.py  UECI_dut_info_extraction.py  UECI_spec_info_extraction.py  data_analysis.py  jira_api.py  jira_interactions.py  jira_operations_class.py
helpers/: DUT_SPEC_UECI_Info_Extraction_helpers.py  NR_data_analysis_helpers.py  Spec_UECI_Info_Extraction_helpers.py  UECI_spec_info_extraction_helpers.py  common_helpers.py  data_analysis_helpers.py  data_conversion_helpers.py  jira_automation_helpers.py  jira_operations_helpers.py  spec_attach_request_info_extraction_helpers.py  specsheet_automation_helpers.py  test_spec_UECI_info_extraction_helpers.py
scripts/: jira_automation.py  jira_bulk.py  one_time_operations.py  specsheet_automation.py
scripts/data_analysis/: data_analysis.py  populate_NR_LTE_specsheet.py  populate_NR_excel_specsheet.py  populate_excel_specsheet.py
static_data/: DUT_UECapabilityInformation_special_elements.py  LTE_specsheet_fields.py  NR_specsheet_fields.py  file_info.py  jira_config.py  specsheet_fields.py
