[metadata]
name = wda-automation-Mustapha
version = 0.0.1
author = Mustapha Assoum
author_email = mustapha.assoum@team.telstra.com
description = WDA Automation backend code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Specsheet_Automation
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Specsheet_Automation